--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <div id="sidebar">
+    <h1>Filipino E-Portfolio</h1>
+    <h3>Ang proyekto ni Bianca Aguilar</h3>
+    <ul>
+      <li><a href="panimula.html">Panimula</a></li>
+      <li><a href="may-akda.html">May-akda</a></li>
+      <li><a href="papel.html">Gawaing Papel</a></li>
+      <li><a href="pananaliksik.html">Pananaliksik</a></li>
+      <li><a href="repleksyon.html">Repleksyon</a></li>
+    </ul>
+  </div>
+  <div id="main">
+
+  </div>
+
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
