--- a/pananaliksik.html
+++ b/pananaliksik.html
@@ -11,6 +11,7 @@
       
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Crimson+Text|PT+Sans" rel="stylesheet">
       </head>
       
       <body>
@@ -21,7 +22,7 @@
         <!-- Add your site or application content here -->
         <div id="sidebar">
           <h1>Filipino E-Portfolio</h1>
-          <h3>Ang proyekto ni Bianca Aguilar</h3>
+          <h2>Ang koleksyon ng mga sulatin at gawain ni <span>Bianca Aguilar</span> sa asignaturang Filipino 3</h2>
           <ul>
             <li><a href="panimula.html">Panimula</a></li>
             <li><a href="may-akda.html">May-akda</a></li>
@@ -33,9 +34,7 @@
         <div id="main">
             <h1>Pananaliksik</h1>
             <h2>Info-video</h2>
-            <iframe width="500"
-            src="https://drive.google.com/file/d/12jRt58osxwtlxPyIlJzBnl600OeJNHde/view">
-            </iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Z5Fkqtt5zpg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2>Daloy ng Programa</h2>
             <iframe src="https://docs.google.com/document/d/e/2PACX-1vRJXcQLztdJSNV_4FndlMup3O5DFu-zfqHI7KQLyJpgohGbEuM4_2EEVb70EYchAfyyDlYefDHLoD8f/pub?embedded=true" width="500" height="600"></iframe>
             <h2>Presentasyon</h2>
