--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text|PT+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
   <!-- Add your site or application content here -->
   <div id="sidebar">
     <h1>Filipino E-Portfolio</h1>
-    <h3>Ang proyekto ni Bianca Aguilar</h3>
+    <h2>Ang proyekto ni Bianca Aguilar</h2>
     <ul>
       <li><a href="panimula.html">Panimula</a></li>
       <li><a href="may-akda.html">May-akda</a></li>
