--- a/repleksyon.html
+++ b/repleksyon.html
@@ -35,8 +35,7 @@
     </ul>
   </div>
   <div id="main">
-    <h1>Ang May-Akda</h1>
-    <img id="me" src="img/me.jpg"/>
+    <h1>Repleksyon</h1>
     <p>Si Bianca Aguilar ay isang masipag at na tao, kapuna-puna sa co-curriculars and organasyons niya. Siya ay isang Grade 12 na estudyante taga De Lasalle Santiago Zobel, Vermosa ipinanganak noong October 3, 2001. Tumira siya sa Las Pinas, kasama ng Nanay at ang kanyang kapatid, at ito ay na humikayat sa sarili niya tungkol sa magiging responsable at masipag kasi siya ay ng pinaka-matanda na anak sa pamikya niya. Aspiring graphic designer at illustrator siya na mahilig sa pagbasa, pagkanta, at pagsadayaw. Ang motto niya ay “Art is long, Life is short”. Siya rin ay isang “perfectionist” na gusto ng lahat ang gumawa niya ay baganda at maayos.</p>
   </div>
 
