--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1>Filipino E-Portfolio</h1>
     <h2>Ang proyekto ni Bianca Aguilar</h2>
     <ul>
-      <li><a href="panimula.html">Panimula</a></li>
+      <li><a href="index.html">Panimula</a></li>
       <li><a href="may-akda.html">May-akda</a></li>
       <li><a href="papel.html">Gawaing Papel</a></li>
       <li><a href="pananaliksik.html">Pananaliksik</a></li>
