--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Add your site or application content here -->
   <div id="sidebar">
     <h1>Filipino E-Portfolio</h1>
-    <h2>Ang proyekto ni Bianca Aguilar</h2>
+    <h2>Ang koleksyon ng mga sulatin at gawain ni <span>Bianca Aguilar</span> sa asignaturang Filipino 3</h2>
     <ul>
       <li><a href="index.html">Panimula</a></li>
       <li><a href="may-akda.html">May-akda</a></li>
@@ -35,7 +35,8 @@
     </ul>
   </div>
   <div id="main">
-
+    <h1>Panimula</h1>
+    <p>Ano ang e-portfolio? Ito ay isang koleksyon ng mga sulatin at gawain. Nilalaman ang e-portfolio ito ang mga gawaing papel at pananaliksik ng 12M Arts & Design. Ang e-portfolio nito ay para sa asignaturang Filipino.</p>
   </div>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
