--- a/repleksyon.html
+++ b/repleksyon.html
@@ -25,7 +25,7 @@
   <!-- Add your site or application content here -->
   <div id="sidebar">
     <h1>Filipino E-Portfolio</h1>
-    <h2>Ang proyekto ni Bianca Aguilar</h2>
+    <h2>Ang koleksyon ng mga sulatin at gawain ni <span>Bianca Aguilar</span> sa asignaturang Filipino 3</h2>
     <ul>
       <li><a href="index.html">Panimula</a></li>
       <li><a href="may-akda.html">May-akda</a></li>
@@ -36,7 +36,7 @@
   </div>
   <div id="main">
     <h1>Repleksyon</h1>
-    <p>Si Bianca Aguilar ay isang masipag at na tao, kapuna-puna sa co-curriculars and organasyons niya. Siya ay isang Grade 12 na estudyante taga De Lasalle Santiago Zobel, Vermosa ipinanganak noong October 3, 2001. Tumira siya sa Las Pinas, kasama ng Nanay at ang kanyang kapatid, at ito ay na humikayat sa sarili niya tungkol sa magiging responsable at masipag kasi siya ay ng pinaka-matanda na anak sa pamikya niya. Aspiring graphic designer at illustrator siya na mahilig sa pagbasa, pagkanta, at pagsadayaw. Ang motto niya ay “Art is long, Life is short”. Siya rin ay isang “perfectionist” na gusto ng lahat ang gumawa niya ay baganda at maayos.</p>
+    <p>Sa pagsusulat ng Filipino, tinulungan ako nito na maipakilala ang aking pagkakakilanlan bilang isang Pilipino. Dahil mas nauna ako maturuan ng ingles, wala ako masyadong kaalaman ukol sa ang sariling wika, 'di gaya ng ibang mga Pilipino, bilang resulta, tingin ko'y ako ay hindi tunay na Pilipino, sa klase sa Pilipino, sa pagsusulat ng iba't ibang isyu sa bansa (Gaya ng 'di magagandang pangangalaga sa kalusugan) ay tunulungan akong matuto tungkol sa kasalukuyang kultura at sitwasyon. Naaplika ko rin ang aking natutunan sa tunay na buhay sa pamamagitan ng pananaliksik na proyekto para sa Haven sa mga bata. Kung hindi dahil sa Filipino, wala akong paraan para makipagusap o makipagugnayan sa mga miyembro ng administrasyon at mga bata ng maayos. Sa pangkalahatan, dahil sa pagsulat ng Filipino tinulungan ako nito para maging isang maayos na mamamayan.</p>
   </div>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
