--- a/may-akda.html
+++ b/may-akda.html
@@ -25,7 +25,7 @@
   <!-- Add your site or application content here -->
   <div id="sidebar">
     <h1>Filipino E-Portfolio</h1>
-    <h2>Ang proyekto ni Bianca Aguilar</h2>
+    <h2>Ang koleksyon ng mga sulatin at gawain ni <span>Bianca Aguilar</span> sa asignaturang Filipino 3</h2>
     <ul>
       <li><a href="index.html">Panimula</a></li>
       <li><a href="may-akda.html">May-akda</a></li>
@@ -37,7 +37,7 @@
   <div id="main">
     <h1>Ang May-Akda</h1>
     <img id="me" src="img/me.jpg"/>
-    <p>Si Bianca Aguilar ay isang masipag at na tao, kapuna-puna sa co-curriculars and organasyons niya. Siya ay isang Grade 12 na estudyante taga De Lasalle Santiago Zobel, Vermosa ipinanganak noong October 3, 2001. Tumira siya sa Las Pinas, kasama ng Nanay at ang kanyang kapatid, at ito ay na humikayat sa sarili niya tungkol sa magiging responsable at masipag kasi siya ay ng pinaka-matanda na anak sa pamikya niya. Aspiring graphic designer at illustrator siya na mahilig sa pagbasa, pagkanta, at pagsadayaw. Ang motto niya ay “Art is long, Life is short”. Siya rin ay isang “perfectionist” na gusto ng lahat ang gumawa niya ay baganda at maayos.</p>
+    <p>Si Bianca Aguilar ay isang masipag na tao, kapuna-puna sa co-curriculars at aktibidad niya. Siya ay isang Grade 12 na estudyante taga De Lasalle Santiago Zobel, Vermosa ipinanganak noong October 3, 2001. Tumira siya sa Las Pinas, kasama ng Nanay at ang kanyang kapatid. Siya ay nanghihikayat sa kanyang mga kapatid at maging sa kanyang sarili na maging responsable at maging masipag kasi siya ay ang pinakamatanda. Mahilig siya sa pagbasa, pagkanta, at pagsayaw. Sa kinabukasan, gusto siya maging isang graphic designer at illustrator. Isa sa mga paboritong sipi niya ay “Maikli ang buhay ng isang tao, pero matagal ang buhay ng sining niya ”. Siya rin ay isang “perfectionist” na sa tuwing may gagawain siya ay kailangan maganda at maayos ito.</p>
   </div>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
