--- a/papel.html
+++ b/papel.html
@@ -25,7 +25,7 @@
   <!-- Add your site or application content here -->
   <div id="sidebar">
     <h1>Filipino E-Portfolio</h1>
-    <h2>Ang proyekto ni Bianca Aguilar</h2>
+    <h2>Ang koleksyon ng mga sulatin at gawain ni <span>Bianca Aguilar</span> sa asignaturang Filipino 3</h2>
     <ul>
       <li><a href="index.html">Panimula</a></li>
       <li><a href="may-akda.html">May-akda</a></li>
